--- a/popup.css
+++ b/popup.css
@@ -1,10 +1,11 @@
 body {
-    background-color: #fdfcf9;
+    background-color: rgb(245, 236, 221);
     color: #3e2c23;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 10px;
-    min-width: 260px;
+    min-width: 270px;
+    max-width: 300px;
     min-height: 300px;
     text-align: center;
 }
@@ -31,10 +32,55 @@ button:hover {
 
 #url-input {
     box-sizing: border-box;
-    margin-bottom: 20px;
     padding: 8px 20px;
     margin: 10px 8px 16px 8px;
     border: 1px solid #a47148;
     border-radius: 6px;
     color: #b97843;
+    
+}
+
+input {
+  -webkit-appearance: none;
+  position: relative;
+  width: 50px;
+  height: 30px;
+  border-radius: 25px;
+  background-color: #ccc;
+  transition: background .3s;
+  outline: none;
+  cursor: pointer;
+}
+
+input::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    height: 1.25rem;
+    width: 1.25rem;
+    background-color: rgb(255, 255, 255);
+    transition: left .3s;
+}
+
+input:checked {
+  background-color: rgb(141, 221, 141);
+}
+
+input:checked::after {
+  left: 70%
+}
+
+
+#JunkSitesList {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 8px 12px;
+  margin: 10px 8px 16px 8px;
+  border: 1px solid #a47148;
+  border-radius: 6px;
+  background-color: #fff;
+  color: #3e2c23;
 }
